GNOME Bugzilla – Bug 620456
mpegtsdemux: Some checks to avoid asserts
Last modified: 2010-06-03 18:18:22 UTC
Fixes a couple of asserts I see over here.
Created attachment 162629 [details] [review] mpegtsdemux: Some checks to avoid asserts gst_mpeg_descriptor_find() expects the description field to be non-NULL. This fixes a couple of calls where the value being passed is not verified to be non-NULL first.
commit e5a37377ae29cfc6f3cef39be028fb2ef7fe3afa Author: Arun Raghavan <arun.raghavan@collabora.co.uk> Date: Thu Jun 3 15:51:18 2010 +0530 mpegtsdemux: Some checks to avoid asserts gst_mpeg_descriptor_find() expects the description field to be non-NULL. This fixes a couple of calls where the value being passed is not verified to be non-NULL first. https://bugzilla.gnome.org/show_bug.cgi?id=620456